fixed expanded and desktop right nav alignment

--- a/mysite/assets/scss/modules/header/_main-nav.scss
+++ b/mysite/assets/scss/modules/header/_main-nav.scss
@@ -1,4 +1,6 @@
 .header__main-nav {
+  $header-brand-width : 174.5px;
+
   display: none;
   @include desktop-header {
     position: static;
@@ -7,6 +9,9 @@
     margin-left: 10px;
     margin-top: 12px;
     display: inline-block;
+    width: -webkit-calc(100% - #{$header-brand-width)};
+        width:    -moz-calc(100% - #{$header-brand-width)});
+        width:         calc(100% - #{$header-brand-width});
   }
   @include expanded-header {
     position: relative;
@@ -15,8 +20,11 @@
     margin-top: 15px;
     margin-left: 0;
     display: block;
+    width: -webkit-calc(100% + 19px);
+        width:    -moz-calc(100% + 19px);
+        width:         calc(100% + 19px);
   }
-  width: auto;
+
   overflow: visible;
   &__item {
     height: 46px;
@@ -30,5 +38,14 @@
     height: 46px;
     z-index: 3;
     overflow: visible;
+  }
+
+  &__left {
+    display: inline-block;
+  }
+
+  &__right {
+    display: inline-block;
+    float:right;
   }
 }
